log
Fri 16 May 2025 09:57:39 PM UTC: 
 tests:  0|5
total_score: 0/70
3f0e54c
Fri 16 May 2025 10:02:01 PM UTC: 
 sudoku.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
Compilation failed
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:67:25: error: implicit declaration of function ‘addNode’ [-Werror=implicit-function-declaration]
   67 |                         addNode(list, copy_node);
      |                         ^~~~~~~
sudoku.c: At top level:
sudoku.c:76:1: error: expected identifier or ‘(’ before ‘}’ token
   76 | }
      | ^
cc1: all warnings being treated as errors
5729496
Fri 16 May 2025 10:02:58 PM UTC: 
 sudoku.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:67:24: error: implicit declaration of function ‘addNode’ [-Werror=implicit-function-declaration]
   67 |                        addNode(list, copy_node);
      |                        ^~~~~~~
cc1: all warnings being treated as errors
38a764e
Fri 16 May 2025 10:03:27 PM UTC: 
Compilation failed
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:67:24: error: implicit declaration of function ‘addNode’ [-Werror=implicit-function-declaration]
   67 |                        addNode(list, copy_node);
      |                        ^~~~~~~
cc1: all warnings being treated as errors
cdbec8d
Fri 16 May 2025 10:04:28 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
d655927
Fri 16 May 2025 10:05:59 PM UTC: 
 sudoku.c | 43 +++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 43 insertions(+)
Compilation failed
In file included from test.c:5:
sudoku.c:91:5: error: expected identifier or ‘(’ before ‘return’
   91 |     return 1;
      |     ^~~~~~
sudoku.c:92:1: error: expected identifier or ‘(’ before ‘}’ token
   92 | }
      | ^
acb3cf4
Fri 16 May 2025 10:06:08 PM UTC: 
 sudoku.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  5|3
total_score: 35/70
fdbfe70
Fri 16 May 2025 10:07:56 PM UTC: 
 sudoku.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
8492e5c
Fri 16 May 2025 10:08:17 PM UTC: 
 sudoku.c | 32 ++++++++++++++++++++++++++++++--
 1 file changed, 30 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:133:12: error: implicit declaration of function ‘isEmpty’; did you mean ‘is_empty’? [-Werror=implicit-function-declaration]
  133 |     while(!isEmpty(S)) {
      |            ^~~~~~~
      |            is_empty
sudoku.c:134:25: error: void value not ignored as it ought to be
  134 |         Node* current = pop(S);
      |                         ^~~
sudoku.c:139:13: error: implicit declaration of function ‘clearStack’; did you mean ‘createStack’? [-Werror=implicit-function-declaration]
  139 |             clearStack(S); // liberar memoria pila
      |             ^~~~~~~~~~
      |             createStack
sudoku.c:147:23: error: implicit declaration of function ‘popList’ [-Werror=implicit-function-declaration]
  147 |         while( (aux = popList(adj)) != NULL ) {
      |                       ^~~~~~~
sudoku.c:147:21: error: assignment to ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  147 |         while( (aux = popList(adj)) != NULL ) {
      |                     ^
sudoku.c:151:9: error: implicit declaration of function ‘freeList’; did you mean ‘createList’? [-Werror=implicit-function-declaration]
  151 |         freeList(adj);
      |         ^~~~~~~~
      |         createList
cc1: all warnings being treated as errors
8011ecd
Fri 16 May 2025 10:09:49 PM UTC: 
 sudoku.c | 21 +++++++++------------
 1 file changed, 9 insertions(+), 12 deletions(-)
Compilation failed
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:144:22: error: invalid use of void expression
  144 |         while((aux = (Node*) popFront(adj)) != NULL){
      |                      ^
277c7d6
Fri 16 May 2025 10:11:24 PM UTC: 
 sudoku.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:142:29: error: implicit declaration of function ‘firstList’ [-Werror=implicit-function-declaration]
  142 |         Node* aux = (Node*) firstList(adj);
      |                             ^~~~~~~~~
sudoku.c:142:21: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
  142 |         Node* aux = (Node*) firstList(adj);
      |                     ^
sudoku.c:147:19: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
  147 |             aux = (Node*) firstList(adj);
      |                   ^
cc1: all warnings being treated as errors
bdb1046
Fri 16 May 2025 10:12:40 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:142:29: error: implicit declaration of function ‘firstList’ [-Werror=implicit-function-declaration]
  142 |         Node* aux = (Node*) firstList(adj);
      |                             ^~~~~~~~~
sudoku.c:142:21: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
  142 |         Node* aux = (Node*) firstList(adj);
      |                     ^
sudoku.c:147:19: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
  147 |             aux = (Node*) firstList(adj);
      |                   ^
cc1: all warnings being treated as errors
4f63937
Fri 16 May 2025 10:13:09 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
b65c10e
Fri 16 May 2025 10:21:37 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|3
total_score: 25/70
992d081
Fri 16 May 2025 10:21:51 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
130789d
Fri 16 May 2025 10:22:37 PM UTC: 
 sudoku.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  3|3
total_score: 25/70
e6146c7
